welcome.lessons.welcome.environment.Environment.scala.code
while (!vuBiscuit()){
	continu();
	if(estSurBiscuit()){recule(6);return vuBiscuit();}else{droite();avance();gauche();}}